@@ -70,6 +70,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <jvmArguments>-Xverify:none</jvmArguments>
                     <skip>true</skip>
                 </configuration>
             </plugin>
